--- a/config/application.properties
+++ b/config/application.properties
@@ -1,3 +1,14 @@
 spring.data.rest.returnBodyOnCreate=true
 spring.data.rest.return-body-on-update=true
 
+
+spring.jpa.hibernate.ddl-auto: create-drop
+spring.jpa.hibernate.naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.database: H2
+spring.jpa.show-sql: true
+
+spring.datasource.url=jdbc:h2:file:d:/h2DBs/produkte/_h2db/produkte;AUTO_SERVER=TRUE;IFEXISTS=FALSE;MODE=Oracle;INIT=CREATE SCHEMA IF NOT EXISTS PRODUKTE
+spring.datasource.username=produkte
+spring.datasource.password=produkte
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.schema=produkte
